bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:3: error: identifier expected but 'false' found.
  if (aSmile and bSmile:false)
                        ^MonkeyTrouble:7: error: ')' expected but '}' found.
} 
^